<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Luxury">

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/gray"
        app:fillColor="@color/orange"
        app:pageColor="@color/white"
        app:radius="6dp"
        app:slideInterval="2000"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginRight="@dimen/dp8"
        android:background="@color/red3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:fontFamily="serif-monospace"
        android:layout_marginLeft="@dimen/dp8"
        android:text="@string/JudulAce"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginTop="@dimen/dp4"
        android:layout_marginBottom="@dimen/dp8"
        android:text="@string/subJudulAce"
        android:textSize="@dimen/sp12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginRight="@dimen/dp8"
        android:background="@color/red3" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:columnCount="3"
                android:rowCount="1">

                <LinearLayout
                    android:layout_width="@dimen/dp196"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dp4"
                    android:orientation="vertical"
                    android:padding="@dimen/dp8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:text="Ukuran"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16"
                        android:textStyle="italic" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"
                        android:columnCount="2"
                        android:rowCount="6">

                        <LinearLayout
                            android:layout_width="@dimen/dp90"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/dp4">

                            <Button
                                style="@style/Widget.AppCompat.Button"
                                android:id="@+id/btnSingle"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/dp44"
                                android:background="@drawable/btncustom"
                                android:padding="@dimen/dp2"
                                android:focusable="true"
                                android:text="@string/single"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/sp10" />

                            <Button
                                style="@style/Widget.AppCompat.Button"
                                android:id="@+id/btnDouble"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/dp44"
                                android:layout_marginTop="@dimen/dp8"
                                android:background="@drawable/btncustom"
                                android:padding="@dimen/dp2"
                                android:text="@string/doublee"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/sp10" />

                            <Button
                                android:id="@+id/btnKing"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/dp44"
                                android:layout_marginTop="@dimen/dp8"
                                android:background="@drawable/btncustom"
                                android:padding="@dimen/dp2"
                                android:text="@string/king"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/sp10" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="@dimen/dp90"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/dp4">

                            <Button
                                android:id="@+id/btnSinglexl"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/dp44"
                                android:background="@drawable/btncustom"
                                android:padding="@dimen/dp2"
                                android:text="@string/singlexl"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/sp10" />

                            <Button
                                android:id="@+id/btnQueen"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/dp44"
                                android:layout_marginTop="@dimen/dp8"
                                android:background="@drawable/btncustom"
                                android:padding="@dimen/dp2"
                                android:text="@string/queen"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/sp10" />

                            <Button
                                android:id="@+id/btnSuperking"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/dp44"
                                android:layout_marginTop="@dimen/dp8"
                                android:background="@drawable/btncustom"
                                android:padding="@dimen/dp2"
                                android:text="@string/superking"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/sp10" />

                        </LinearLayout>

                    </GridLayout>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/dp200"
                    android:layout_gravity="center_vertical"
                    android:background="@color/red3" />

                <LinearLayout
                    android:layout_width="@dimen/dp196"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dp4"
                    android:orientation="vertical"
                    android:padding="@dimen/dp4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:text="Harga"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="@dimen/dp120"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dp8"
                        android:background="@drawable/round"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="@dimen/dp8"
                            android:fontFamily="sans-serif-condensed"
                            android:padding="@dimen/dp4"
                            android:text="Rp."
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp16" />

                        <TextView
                            android:id="@+id/txtHarga"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="sans-serif-condensed"
                            android:padding="@dimen/dp4"
                            android:text="3420000"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp16" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:fontFamily="serif-monospace"
                        android:text="Jumlah"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16"
                        android:textStyle="italic" />

                    <View
                        android:layout_width="@dimen/dp110"
                        android:layout_height="1dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/sp16"
                        android:background="@color/red3" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnMin"
                            android:layout_width="@dimen/dp35"
                            android:layout_height="@dimen/dp35"
                            android:background="@drawable/round5"
                            android:text="-"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp16" />

                        <EditText
                            android:id="@+id/edtJumlah"
                            android:layout_width="@dimen/dp70"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:enabled="false"
                            android:gravity="center"
                            android:inputType="number"
                            android:text="1"
                            android:textColor="@color/red2" />

                        <Button
                            android:id="@+id/btnPlus"
                            android:layout_width="@dimen/dp35"
                            android:layout_height="@dimen/dp35"
                            android:background="@drawable/round5"
                            android:text="+"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp16" />

                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/dp110"
                        android:layout_height="1dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/dp16"
                        android:background="@color/red3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:text="Total"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="@dimen/dp120"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp8"
                        android:background="@drawable/round"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp8"
                            android:fontFamily="sans-serif-condensed"
                            android:padding="@dimen/dp4"
                            android:text="Rp."
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtTotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="sans-serif-condensed"
                            android:padding="@dimen/dp4"
                            android:text="3420000"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp16"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray80"
                android:orientation="vertical"
                android:padding="@dimen/dp8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:text="Deskripsi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp8"
                    android:layout_marginBottom="@dimen/dp8"
                    android:fontFamily="serif-monospace"
                    android:text="@string/deskAce"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp12" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>